--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html itemtype="http://schema.org/WebPage">
+<html>
 	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="content-type" content="text/html" />
@@ -9,6 +9,7 @@
 		<!-- Creating Application Title -->
 		<title id='app_title'>Tocl CSS Magic</title>
 		<!-- Loading Application Scripts -->
-		<script id="loader" type="text/javascript" src="tocm.js"></script>
+		<script id="tocm" type="text/javascript" src="tocm.js"></script>
+		<script id="xquery" type="text/javascript" src="xquery.js"></script>
 	</head>
 </html>
