--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="content-type" content="text/html" />
-		<meta name="viewport" content="height=device-height, initial-scale=1.0, user-scalable=0, maximum-scale=1.0" />
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-		<!-- Creating Application Title -->
-		<title id='app_title'>Tocl CSS Magic</title>
-		<!-- Loading Application Scripts -->
-		<script id="tocm" type="text/javascript" src="tocm.js"></script>
-		<script id="xquery" type="text/javascript" src="xquery.js"></script>
-	</head>
+<head>
+    <!-- Creating Application Title -->
+    <title>Tocl CSS Magic</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="content-type" content="text/html" />
+    <meta name="viewport" content="height=device-height, initial-scale=1.0, user-scalable=0, maximum-scale=1.0" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <!-- Loading Application Scripts -->
+    <script data-main="default.js" src="reference/require.js"></script>
+</head>
+<body>
+
+</body>
 </html>
