--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="test/script/jsbrush.js"></script>
     <script src="test/script/cssbrush.js"></script>
     <script src="test/class/default.css.js"></script>
+    <script src="source/ext/animation.js"></script>
 </head>
 <body>
     <header id="header" class="header">
