--- a/test/query.html
+++ b/test/query.html
@@ -11,9 +11,21 @@
     <link rel="stylesheet" href="../test/boilerplate.css" />
     <script src="../build/tocm.1.1.js"></script>
     <script src="../build/tocm.global.min.js"></script>
+    <script src="../source/ext/animation.js"></script>
+    <script src="class/anim.css.js"></script>
     <script src="../source/ext/query.js"></script>
+    <script src="../source/ext/query.module.js"></script>
 </head>
 <body>
+    <section id="page" class="page">
+        <span id="test" class="test">PERCOBAAN SAJA</span>
+    </section>
+    <section id="page" class="page">
+        <span id="test" class="test">PERCOBAAN SAJA</span>
+    </section>
+    <section id="page" class="page">
+        <span id="test" class="test">PERCOBAAN SAJA</span>
+    </section>
     <section id="page" class="page">
         <span id="test" class="test">PERCOBAAN SAJA</span>
     </section>
