--- a/test/query.html
+++ b/test/query.html
@@ -9,12 +9,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <!-- Loading Application Scripts -->
     <link rel="stylesheet" href="../test/boilerplate.css" />
-    <script src="../build/tocm.1.1.js"></script>
-    <script src="../build/tocm.global.min.js"></script>
-    <script src="../source/ext/animation.js"></script>
+    <script type="text/javascript" src="../build/tocm.full.js"></script>
     <script src="class/anim.css.js"></script>
-    <script src="../source/ext/query.js"></script>
-    <script src="../source/ext/query.module.js"></script>
 </head>
 <body>
     <section id="page" class="page">
