--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
     <link rel="stylesheet" href="test/boilerplate.css" />
     <link rel="stylesheet" href="test/css/brushcore.css" />
     <link rel="stylesheet" href="test/css/brushtheme.css" />
-    <script src="build/tocm.1.1.js"></script>
-    <script src="build/tocm.global.min.js"></script>
+    <script src="build/tocm.full.js"></script>
     <script src="test/script/brush.js"></script>
     <script src="test/script/jsbrush.js"></script>
     <script src="test/script/cssbrush.js"></script>
-    <script src="test/class/default.css.js"></script>
-    <script src="source/ext/animation.js"></script>
 </head>
 <body>
     <header id="header" class="header">
