--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <!-- Loading Application Scripts -->
-    <link rel="stylesheet" href="test/boilerplate.css" />
     <link rel="stylesheet" href="test/css/brushcore.css" />
     <link rel="stylesheet" href="test/css/brushtheme.css" />
+
     <script src="build/tocm.full.js"></script>
+    <script src="build/boilerplate.js"></script>
+
+    <script src="test/class/default.css.js"></script>
     <script src="test/script/brush.js"></script>
     <script src="test/script/jsbrush.js"></script>
     <script src="test/script/cssbrush.js"></script>
