--- a/test/query.html
+++ b/test/query.html
@@ -8,8 +8,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <!-- Loading Application Scripts -->
-    <link rel="stylesheet" href="../test/boilerplate.css" />
     <script type="text/javascript" src="../build/tocm.full.js"></script>
+    <script type="text/javascript" src="../build/boilerplate.js"></script>
     <script src="class/anim.css.js"></script>
 </head>
 <body>
