--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="test/css/brushtheme.css" />
 
     <script src="build/tocm.full.js"></script>
-    <script src="build/boilerplate.js"></script>
+    <script src="build/class/boilerplate.js"></script>
 
     <script src="test/class/default.css.js"></script>
     <script src="test/script/brush.js"></script>
