--- a/sample/sp.pf.stack.html
+++ b/sample/sp.pf.stack.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <!-- Loading Application Scripts -->
-    <script src="../build/tocm-1.1.yui.js"></script>
+    <script src="../build/tocm-1.1.js"></script>
     <script src="../build/class/boilerplate.js"></script>
     <script src="../build/class/tocmgrid.js"></script>
     
