--- a/sample/sp.pf.stack.html
+++ b/sample/sp.pf.stack.html
@@ -3,24 +3,23 @@
     <!-- Creating Application Title -->
     <title>Tocl CSS Magic</title>
     <meta charset="UTF-8">
-    <meta http-equiv="content-type" content="text/html" />
-    <meta name="viewport" content="height=device-height, initial-scale=1.0, user-scalable=0, maximum-scale=1.0" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=0" />
     <!-- Loading Application Scripts -->
     <script src="../build/tocm-1.1.js"></script>
     <script src="../build/class/boilerplate.js"></script>
-    <script src="../build/class/tocmgrid.js"></script>
     
     <script src="class/sp.pf.stack.js"></script>
 </head>
 <body>
+    <div class="table stretch absolute">
+        <div class="cell middle center wel-txt">Welcome to Tocm</div>
+    </div>
     <header id="header" class="header">
         <section class="header-offset">
             Welcome to TocmTest
         </section>
     </header>
-    <section class="page-wrap clearfix">
+    <section class="page-wrap clear">
         <div class="page-offset">
             <article id="about" class="page-stack">
                 Page One
