--- a/sample/sp.pf.stack.html
+++ b/sample/sp.pf.stack.html
@@ -7,15 +7,16 @@
     <!-- Loading Application Scripts -->
     <script src="../build/tocm-1.1.js"></script>
     <script src="../build/class/boilerplate.js"></script>
-    
+    <script src="../build/class/tocm-ui.js"></script>
+
     <script src="class/sp.pf.stack.js"></script>
 </head>
 <body>
-    <div class="table stretch absolute">
+    <div class="table stretch fixed">
         <div class="cell middle center wel-txt">Welcome to Tocm</div>
     </div>
-    <header id="header" class="header">
-        <section class="header-offset">
+    <header id="header" class="header center white fixed">
+        <section class="inline-block small-pad medium-border-bottom small-bottom-radius blacko-bg">
             Welcome to TocmTest
         </section>
     </header>
