Moved 'define' function to 'assign' to prevent conflict with require js.

--- a/sample/sp.pf.stack.html
+++ b/sample/sp.pf.stack.html
@@ -5,11 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=0" />
     <!-- Loading Application Scripts -->
-    <script src="../build/tocm-1.1.js"></script>
-    <script src="../build/class/boilerplate.js"></script>
-    <script src="../build/class/tocm-ui.js"></script>
-
-    <script src="class/sp.pf.stack.js"></script>
+    <script data-main="main.js" src="../source/ref/require.js"></script>
 </head>
 <body>
     <div class="table stretch fixed">
